// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sidebar navigation should match snapshot with active link 1`] = `
<DocumentFragment>
  @media screen {
  .emotion-0 {
    display: block;
  }
}

@media screen and (min-width: 480px) {
  .emotion-0 {
    display: block;
  }
}

@media screen and (min-width: 768px) {
  .emotion-0 {
    display: block;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-0 {
    display: none;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-0 {
    display: none;
  }
}

.emotion-1 {
  box-sizing: border-box;
  height: 100%;
}

.emotion-1>ul {
  box-sizing: border-box;
  position: relative;
  list-style-type: none;
  margin: 0;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 100%;
}

.emotion-1 li:last-of-type {
  margin-bottom: 0;
}

.emotion-2 {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.emotion-3 {
  background-color: transparent;
  color: #09111c;
  margin-top: 16px;
  margin-bottom: 0px;
}

.emotion-3.collapsed>li {
  overflow: hidden;
  max-height: 0px;
  -webkit-transition: max-height 0.8s cubic-bezier(0, 1, 0, 1) -0.1s;
  transition: max-height 0.8s cubic-bezier(0, 1, 0, 1) -0.1s;
  margin-bottom: 0px;
  visibility: hidden;
}

.emotion-3.expanded>li {
  transition-timing-function: cubic-bezier(0.5, 0, 1, 0);
  transition-delay: 0s;
}

.emotion-3.expanded>li:last-of-type {
  margin-bottom: 32px;
}

.emotion-4 {
  margin: 0;
  font-family: Poppins,sans-serif;
  font-size: 1.125rem;
  line-height: 1.265625rem;
  font-weight: 700;
  letter-spacing: 0em;
  padding: 0.5px 0px;
  margin-inline: 32px;
  margin-block: 4px;
}

.emotion-4::before {
  content: '';
  margin-bottom: -0.2035em;
  display: block;
}

.emotion-4::after {
  content: '';
  margin-top: -0.2215em;
  display: block;
}

.emotion-5 {
  margin: 0;
  padding: 0;
  display: grid;
  -webkit-column-gap: 20px;
  column-gap: 20px;
  grid-template-columns: 1fr auto;
}

.emotion-6 {
  margin: 0;
  padding: 0;
  display: inline-grid;
  -webkit-column-gap: 8px;
  column-gap: 8px;
  grid-template-columns: repeat(1, auto);
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  justify-items: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 32px;
  min-width: 64px;
  height: 32px;
  min-height: 32px;
  padding-inline: 8px;
  padding-block: 8px;
  box-sizing: border-box;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: auto;
  min-width: auto;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: transparent;
  border-radius: 50%;
  color: #3358cc;
  cursor: pointer;
}

.emotion-6 svg {
  width: 16px;
  height: 16px;
}

.emotion-6 svg {
  fill: #3358cc;
}

.emotion-6:hover:not(:disabled) {
  background-color: #ecf1ff;
}

.emotion-6:active:not(:disabled) {
  background-color: #d5e0fc;
}

.emotion-6:disabled {
  background-color: transparent;
  color: #a1acb4;
}

.emotion-6:disabled svg {
  fill: #a1acb4;
}

.emotion-6:focus-visible:not(:disabled) {
  outline-color: #3768fb;
  outline-style: solid;
  outline-width: 2px;
  outline-offset: 2px;
}

@media not all and (min-resolution: 0.001dpcm) {
  @supports (-webkit-appearance: none) and (stroke-color: transparent) {
    .emotion-6:focus-visible:not(:disabled) {
      outline-style: auto;
    }
  }
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-6 {
    transition-property: background-color;
    transition-duration: 200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-6 {
    transition-property: background-color;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-7 {
  color: #09111c;
  fill: #09111c;
  vertical-align: unset;
  display: inline-block;
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-7 {
    transition-property: fill;
    transition-duration: 200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-7 {
    transition-property: fill;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-7.emotion-7 {
  width: 24px;
  height: 24px;
  color: #09111c;
  fill: #09111c;
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-7.emotion-7 {
    transition-property: fill;
    transition-duration: 200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-7.emotion-7 {
    transition-property: fill;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-8 {
  box-sizing: border-box;
  margin-bottom: 0px;
}

.emotion-9 {
  margin: 0;
  padding: 0;
  display: inline-grid;
  -webkit-column-gap: 8px;
  column-gap: 8px;
  grid-template-columns: repeat(1, auto);
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  justify-items: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 64px;
  min-height: 40px;
  padding-inline: 64px;
  padding-block: 8px;
  box-sizing: border-box;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 40px;
  min-width: 64px;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-color: transparent;
  border-width: 4px;
  border-style: solid;
  color: #5a6a79;
  cursor: pointer;
  width: 100%;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-color: transparent transparent transparent #3358cc;
  border-width: 4px;
  border-style: solid;
  color: #3358cc;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  text-align: left;
}

.emotion-9 svg {
  width: 16px;
  height: 16px;
}

.emotion-9:hover:not(:disabled) {
  color: #254cac;
  background-color: #d5e0fc;
}

.emotion-9:active:not(:disabled) {
  color: #14328d;
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-9 {
    transition-property: background-color;
    transition-duration: 200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-9 {
    transition-property: background-color;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-10 {
  margin: 0;
  font-family: Poppins,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 600;
  letter-spacing: 0em;
  padding: 0.5px 0px;
  display: inline-block;
}

.emotion-10::before {
  content: '';
  margin-bottom: -0.391em;
  display: block;
}

.emotion-10::after {
  content: '';
  margin-top: -0.409em;
  display: block;
}

.emotion-17 {
  box-sizing: border-box;
  margin-bottom: 24px;
}

.emotion-17>ul {
  box-sizing: border-box;
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.emotion-18 {
  box-sizing: border-box;
  margin-bottom: 12px;
  padding-inline: 48px;
}

.emotion-19 {
  margin: 0;
  background-color: transparent;
  color: #09111c;
  font-family: Poppins,sans-serif;
  font-size: 1rem;
  line-height: 1.125rem;
  font-weight: 700;
  letter-spacing: 0em;
  padding: 0.5px 0px;
}

.emotion-19::before {
  content: '';
  margin-bottom: -0.2035em;
  display: block;
}

.emotion-19::after {
  content: '';
  margin-top: -0.2215em;
  display: block;
}

.emotion-21 {
  margin: 0;
  padding: 0;
  display: inline-grid;
  -webkit-column-gap: 8px;
  column-gap: 8px;
  grid-template-columns: repeat(1, auto);
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  justify-items: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 64px;
  min-height: 40px;
  padding-inline: 64px;
  padding-block: 8px;
  box-sizing: border-box;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 40px;
  min-width: 64px;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-color: transparent;
  border-width: 4px;
  border-style: solid;
  color: #5a6a79;
  cursor: pointer;
  width: 100%;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  text-align: left;
}

.emotion-21 svg {
  width: 16px;
  height: 16px;
}

.emotion-21:hover:not(:disabled) {
  color: #254cac;
  background-color: #d5e0fc;
}

.emotion-21:active:not(:disabled) {
  color: #14328d;
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-21 {
    transition-property: background-color;
    transition-duration: 200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-21 {
    transition-property: background-color;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-35 {
  width: 100%;
  position: relative;
  left: calc(-50vw + 50%);
  margin-top: 4px;
  margin-bottom: 8px;
}

.emotion-36 {
  border-style: solid;
  border-color: #dee2e5;
  border-width: 1px;
  border-width: 0px;
  margin: 0;
  border-top-width: 1px;
  width: 100%;
}

<div
    class="emotion-0"
  >
    <nav
      aria-label="sidebar-secondary-navigation"
      class="emotion-1"
      data-testid="menu-container"
      role="navigation"
    >
      <ul
        role="list"
      >
        <ul
          class="emotion-2"
        >
          <div
            class="expanded emotion-3"
          >
            <h3
              class="emotion-4"
            >
              <div
                class="emotion-5"
              >
                Group 1
                <button
                  aria-expanded="true"
                  aria-label="Show sub-menu for Group 1"
                  class="emotion-6"
                  data-testid="button"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="emotion-7"
                    fill="currentColor"
                    height="24px"
                    viewBox="0 0 24 24"
                    width="24px"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M0 0h24v24H0V0z"
                      fill="none"
                    />
                    <path
                      d="M12 8l-6 6 1.41 1.41L12 10.83l4.59 4.58L18 14l-6-6z"
                    />
                  </svg>
                </button>
              </div>
            </h3>
            <li
              class="nk-menu-item emotion-8"
            >
              <a
                aria-current="page"
                class="emotion-9"
                data-testid="buttonLink"
                href="/group1/page1"
              >
                <span
                  class="emotion-10"
                >
                  Group 1 Page 1
                </span>
              </a>
            </li>
          </div>
        </ul>
        <ul
          class="emotion-2"
        >
          <div
            class="collapsed emotion-3"
          >
            <h3
              class="emotion-4"
            >
              <div
                class="emotion-5"
              >
                Group 2
                <button
                  aria-expanded="false"
                  aria-label="Hide sub-menu for Group 2"
                  class="emotion-6"
                  data-testid="button"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="emotion-7"
                    fill="currentColor"
                    height="24px"
                    viewBox="0 0 24 24"
                    width="24px"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M24 24H0V0h24v24z"
                      fill="none"
                      opacity=".87"
                    />
                    <path
                      d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6-1.41-1.41z"
                    />
                  </svg>
                </button>
              </div>
            </h3>
            <li
              class="nk-menu-group emotion-17"
            >
              <div
                class="emotion-18"
              >
                <h2
                  class="emotion-19"
                  id="mock-nk-1"
                >
                  Group 2 Page 1
                </h2>
              </div>
              <ul
                aria-labelledby="mock-nk-1"
              >
                <li
                  class="nk-menu-item emotion-8"
                >
                  <a
                    aria-current="false"
                    class="emotion-21"
                    data-testid="buttonLink"
                    href="/group2/page1/a"
                  >
                    <span
                      class="emotion-10"
                    >
                      Group 2 Page 1 a
                    </span>
                  </a>
                </li>
                <li
                  class="nk-menu-item emotion-8"
                >
                  <a
                    aria-current="false"
                    class="emotion-21"
                    data-testid="buttonLink"
                    href="/group2/page1/b"
                  >
                    <span
                      class="emotion-10"
                    >
                      Group 2 Page 1 b
                    </span>
                  </a>
                </li>
              </ul>
            </li>
            <li
              class="nk-menu-group emotion-17"
            >
              <div
                class="emotion-18"
              >
                <h2
                  class="emotion-19"
                  id="mock-nk-1"
                >
                  Group 2 Page 2
                </h2>
              </div>
              <ul
                aria-labelledby="mock-nk-1"
              >
                <li
                  class="nk-menu-item emotion-8"
                >
                  <a
                    aria-current="false"
                    class="emotion-21"
                    data-testid="buttonLink"
                    href="/group2/page2/a"
                  >
                    <span
                      class="emotion-10"
                    >
                      Group 2 Page 2 a
                    </span>
                  </a>
                </li>
                <li
                  class="nk-menu-item emotion-8"
                >
                  <a
                    aria-current="false"
                    class="emotion-21"
                    data-testid="buttonLink"
                    href="/group2/page2/b"
                  >
                    <span
                      class="emotion-10"
                    >
                      Group 2 Page 2 b
                    </span>
                  </a>
                </li>
              </ul>
            </li>
          </div>
        </ul>
        <div
          class="emotion-35"
        >
          <hr
            aria-hidden="true"
            class="emotion-36"
            data-testid="divider"
          />
        </div>
      </ul>
    </nav>
  </div>
  @media screen {
  .emotion-0 {
    display: none;
  }
}

@media screen and (min-width: 480px) {
  .emotion-0 {
    display: none;
  }
}

@media screen and (min-width: 768px) {
  .emotion-0 {
    display: none;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-0 {
    display: block;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-0 {
    display: block;
  }
}

.emotion-1 {
  box-sizing: border-box;
  height: 100%;
}

.emotion-1>ul {
  box-sizing: border-box;
  position: relative;
  list-style-type: none;
  margin: 0;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 100%;
}

.emotion-1 li:last-of-type {
  margin-bottom: 0;
}

.emotion-2 {
  box-sizing: border-box;
  margin-bottom: 0px;
}

.emotion-3 {
  margin: 0;
  padding: 0;
  display: inline-grid;
  -webkit-column-gap: 8px;
  column-gap: 8px;
  grid-template-columns: repeat(3, auto);
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  justify-items: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 64px;
  min-height: 40px;
  padding-inline: 16px;
  -webkit-padding-start: 32px;
  padding-inline-start: 32px;
  padding-block: 8px;
  box-sizing: border-box;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 40px;
  min-width: 64px;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-color: transparent;
  border-width: 4px;
  border-style: solid;
  color: #5a6a79;
  cursor: pointer;
  width: 100%;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-color: transparent transparent transparent #3358cc;
  border-width: 4px;
  border-style: solid;
  color: #3358cc;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  text-align: left;
}

.emotion-3 svg {
  width: 16px;
  height: 16px;
}

.emotion-3:hover:not(:disabled) {
  color: #254cac;
  background-color: #d5e0fc;
}

.emotion-3:active:not(:disabled) {
  color: #14328d;
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-3 {
    transition-property: background-color;
    transition-duration: 200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-3 {
    transition-property: background-color;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-4 {
  margin: 0;
  font-family: Poppins,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 600;
  letter-spacing: 0em;
  padding: 0.5px 0px;
  display: inline-block;
}

.emotion-4::before {
  content: '';
  margin-bottom: -0.391em;
  display: block;
}

.emotion-4::after {
  content: '';
  margin-top: -0.409em;
  display: block;
}

.emotion-6 {
  margin-bottom: 32px;
}

<div
    class="emotion-0"
  >
    <nav
      aria-label="menu-sidebar"
      class="emotion-1"
      data-testid="menu-container"
      role="navigation"
    >
      <ul
        role="list"
      >
        <li
          class="nk-menu-item emotion-2"
        >
          <a
            aria-current="page"
            class="emotion-3"
            href="/group1/page1"
          >
            <span
              class="emotion-4"
            >
              Group 1 Page 1
            </span>
            <span
              class="emotion-4"
            >
               
            </span>
            <span />
          </a>
        </li>
      </ul>
    </nav>
    <div
      class="emotion-6"
    />
  </div>
</DocumentFragment>
`;

exports[`Sidebar navigation should match snapshot with no active link 1`] = `
<DocumentFragment>
  @media screen {
  .emotion-0 {
    display: block;
  }
}

@media screen and (min-width: 480px) {
  .emotion-0 {
    display: block;
  }
}

@media screen and (min-width: 768px) {
  .emotion-0 {
    display: block;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-0 {
    display: none;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-0 {
    display: none;
  }
}

.emotion-1 {
  box-sizing: border-box;
  height: 100%;
}

.emotion-1>ul {
  box-sizing: border-box;
  position: relative;
  list-style-type: none;
  margin: 0;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 100%;
}

.emotion-1 li:last-of-type {
  margin-bottom: 0;
}

.emotion-2 {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.emotion-3 {
  background-color: transparent;
  color: #09111c;
  margin-top: 16px;
  margin-bottom: 0px;
}

.emotion-3.collapsed>li {
  overflow: hidden;
  max-height: 0px;
  -webkit-transition: max-height 0.8s cubic-bezier(0, 1, 0, 1) -0.1s;
  transition: max-height 0.8s cubic-bezier(0, 1, 0, 1) -0.1s;
  margin-bottom: 0px;
  visibility: hidden;
}

.emotion-3.expanded>li {
  transition-timing-function: cubic-bezier(0.5, 0, 1, 0);
  transition-delay: 0s;
}

.emotion-3.expanded>li:last-of-type {
  margin-bottom: 32px;
}

.emotion-4 {
  margin: 0;
  font-family: Poppins,sans-serif;
  font-size: 1.125rem;
  line-height: 1.265625rem;
  font-weight: 700;
  letter-spacing: 0em;
  padding: 0.5px 0px;
  margin-inline: 32px;
  margin-block: 4px;
}

.emotion-4::before {
  content: '';
  margin-bottom: -0.2035em;
  display: block;
}

.emotion-4::after {
  content: '';
  margin-top: -0.2215em;
  display: block;
}

.emotion-5 {
  margin: 0;
  padding: 0;
  display: grid;
  -webkit-column-gap: 20px;
  column-gap: 20px;
  grid-template-columns: 1fr auto;
}

.emotion-6 {
  margin: 0;
  padding: 0;
  display: inline-grid;
  -webkit-column-gap: 8px;
  column-gap: 8px;
  grid-template-columns: repeat(1, auto);
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  justify-items: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 32px;
  min-width: 64px;
  height: 32px;
  min-height: 32px;
  padding-inline: 8px;
  padding-block: 8px;
  box-sizing: border-box;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: auto;
  min-width: auto;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: transparent;
  border-radius: 50%;
  color: #3358cc;
  cursor: pointer;
}

.emotion-6 svg {
  width: 16px;
  height: 16px;
}

.emotion-6 svg {
  fill: #3358cc;
}

.emotion-6:hover:not(:disabled) {
  background-color: #ecf1ff;
}

.emotion-6:active:not(:disabled) {
  background-color: #d5e0fc;
}

.emotion-6:disabled {
  background-color: transparent;
  color: #a1acb4;
}

.emotion-6:disabled svg {
  fill: #a1acb4;
}

.emotion-6:focus-visible:not(:disabled) {
  outline-color: #3768fb;
  outline-style: solid;
  outline-width: 2px;
  outline-offset: 2px;
}

@media not all and (min-resolution: 0.001dpcm) {
  @supports (-webkit-appearance: none) and (stroke-color: transparent) {
    .emotion-6:focus-visible:not(:disabled) {
      outline-style: auto;
    }
  }
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-6 {
    transition-property: background-color;
    transition-duration: 200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-6 {
    transition-property: background-color;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-7 {
  color: #09111c;
  fill: #09111c;
  vertical-align: unset;
  display: inline-block;
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-7 {
    transition-property: fill;
    transition-duration: 200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-7 {
    transition-property: fill;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-7.emotion-7 {
  width: 24px;
  height: 24px;
  color: #09111c;
  fill: #09111c;
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-7.emotion-7 {
    transition-property: fill;
    transition-duration: 200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-7.emotion-7 {
    transition-property: fill;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-8 {
  box-sizing: border-box;
  margin-bottom: 0px;
}

.emotion-9 {
  margin: 0;
  padding: 0;
  display: inline-grid;
  -webkit-column-gap: 8px;
  column-gap: 8px;
  grid-template-columns: repeat(1, auto);
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  justify-items: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 64px;
  min-height: 40px;
  padding-inline: 64px;
  padding-block: 8px;
  box-sizing: border-box;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 40px;
  min-width: 64px;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-color: transparent;
  border-width: 4px;
  border-style: solid;
  color: #5a6a79;
  cursor: pointer;
  width: 100%;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  text-align: left;
}

.emotion-9 svg {
  width: 16px;
  height: 16px;
}

.emotion-9:hover:not(:disabled) {
  color: #254cac;
  background-color: #d5e0fc;
}

.emotion-9:active:not(:disabled) {
  color: #14328d;
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-9 {
    transition-property: background-color;
    transition-duration: 200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-9 {
    transition-property: background-color;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-10 {
  margin: 0;
  font-family: Poppins,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 600;
  letter-spacing: 0em;
  padding: 0.5px 0px;
  display: inline-block;
}

.emotion-10::before {
  content: '';
  margin-bottom: -0.391em;
  display: block;
}

.emotion-10::after {
  content: '';
  margin-top: -0.409em;
  display: block;
}

.emotion-17 {
  box-sizing: border-box;
  margin-bottom: 24px;
}

.emotion-17>ul {
  box-sizing: border-box;
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.emotion-18 {
  box-sizing: border-box;
  margin-bottom: 12px;
  padding-inline: 48px;
}

.emotion-19 {
  margin: 0;
  background-color: transparent;
  color: #09111c;
  font-family: Poppins,sans-serif;
  font-size: 1rem;
  line-height: 1.125rem;
  font-weight: 700;
  letter-spacing: 0em;
  padding: 0.5px 0px;
}

.emotion-19::before {
  content: '';
  margin-bottom: -0.2035em;
  display: block;
}

.emotion-19::after {
  content: '';
  margin-top: -0.2215em;
  display: block;
}

.emotion-35 {
  width: 100%;
  position: relative;
  left: calc(-50vw + 50%);
  margin-top: 4px;
  margin-bottom: 8px;
}

.emotion-36 {
  border-style: solid;
  border-color: #dee2e5;
  border-width: 1px;
  border-width: 0px;
  margin: 0;
  border-top-width: 1px;
  width: 100%;
}

<div
    class="emotion-0"
  >
    <nav
      aria-label="sidebar-secondary-navigation"
      class="emotion-1"
      data-testid="menu-container"
      role="navigation"
    >
      <ul
        role="list"
      >
        <ul
          class="emotion-2"
        >
          <div
            class="collapsed emotion-3"
          >
            <h3
              class="emotion-4"
            >
              <div
                class="emotion-5"
              >
                Group 1
                <button
                  aria-expanded="false"
                  aria-label="Hide sub-menu for Group 1"
                  class="emotion-6"
                  data-testid="button"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="emotion-7"
                    fill="currentColor"
                    height="24px"
                    viewBox="0 0 24 24"
                    width="24px"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M24 24H0V0h24v24z"
                      fill="none"
                      opacity=".87"
                    />
                    <path
                      d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6-1.41-1.41z"
                    />
                  </svg>
                </button>
              </div>
            </h3>
            <li
              class="nk-menu-item emotion-8"
            >
              <a
                aria-current="false"
                class="emotion-9"
                data-testid="buttonLink"
                href="/group1/page1"
              >
                <span
                  class="emotion-10"
                >
                  Group 1 Page 1
                </span>
              </a>
            </li>
          </div>
        </ul>
        <ul
          class="emotion-2"
        >
          <div
            class="collapsed emotion-3"
          >
            <h3
              class="emotion-4"
            >
              <div
                class="emotion-5"
              >
                Group 2
                <button
                  aria-expanded="false"
                  aria-label="Hide sub-menu for Group 2"
                  class="emotion-6"
                  data-testid="button"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="emotion-7"
                    fill="currentColor"
                    height="24px"
                    viewBox="0 0 24 24"
                    width="24px"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M24 24H0V0h24v24z"
                      fill="none"
                      opacity=".87"
                    />
                    <path
                      d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6-1.41-1.41z"
                    />
                  </svg>
                </button>
              </div>
            </h3>
            <li
              class="nk-menu-group emotion-17"
            >
              <div
                class="emotion-18"
              >
                <h2
                  class="emotion-19"
                  id="mock-nk-1"
                >
                  Group 2 Page 1
                </h2>
              </div>
              <ul
                aria-labelledby="mock-nk-1"
              >
                <li
                  class="nk-menu-item emotion-8"
                >
                  <a
                    aria-current="false"
                    class="emotion-9"
                    data-testid="buttonLink"
                    href="/group2/page1/a"
                  >
                    <span
                      class="emotion-10"
                    >
                      Group 2 Page 1 a
                    </span>
                  </a>
                </li>
                <li
                  class="nk-menu-item emotion-8"
                >
                  <a
                    aria-current="false"
                    class="emotion-9"
                    data-testid="buttonLink"
                    href="/group2/page1/b"
                  >
                    <span
                      class="emotion-10"
                    >
                      Group 2 Page 1 b
                    </span>
                  </a>
                </li>
              </ul>
            </li>
            <li
              class="nk-menu-group emotion-17"
            >
              <div
                class="emotion-18"
              >
                <h2
                  class="emotion-19"
                  id="mock-nk-1"
                >
                  Group 2 Page 2
                </h2>
              </div>
              <ul
                aria-labelledby="mock-nk-1"
              >
                <li
                  class="nk-menu-item emotion-8"
                >
                  <a
                    aria-current="false"
                    class="emotion-9"
                    data-testid="buttonLink"
                    href="/group2/page2/a"
                  >
                    <span
                      class="emotion-10"
                    >
                      Group 2 Page 2 a
                    </span>
                  </a>
                </li>
                <li
                  class="nk-menu-item emotion-8"
                >
                  <a
                    aria-current="false"
                    class="emotion-9"
                    data-testid="buttonLink"
                    href="/group2/page2/b"
                  >
                    <span
                      class="emotion-10"
                    >
                      Group 2 Page 2 b
                    </span>
                  </a>
                </li>
              </ul>
            </li>
          </div>
        </ul>
        <div
          class="emotion-35"
        >
          <hr
            aria-hidden="true"
            class="emotion-36"
            data-testid="divider"
          />
        </div>
      </ul>
    </nav>
  </div>
  @media screen {
  .emotion-0 {
    display: none;
  }
}

@media screen and (min-width: 480px) {
  .emotion-0 {
    display: none;
  }
}

@media screen and (min-width: 768px) {
  .emotion-0 {
    display: none;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-0 {
    display: block;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-0 {
    display: block;
  }
}

.emotion-1 {
  box-sizing: border-box;
  height: 100%;
}

.emotion-1>ul {
  box-sizing: border-box;
  position: relative;
  list-style-type: none;
  margin: 0;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 100%;
}

.emotion-1 li:last-of-type {
  margin-bottom: 0;
}

.emotion-2 {
  margin-bottom: 32px;
}

<div
    class="emotion-0"
  >
    <nav
      aria-label="menu-sidebar"
      class="emotion-1"
      data-testid="menu-container"
      role="navigation"
    >
      <ul
        role="list"
      />
    </nav>
    <div
      class="emotion-2"
    />
  </div>
</DocumentFragment>
`;

exports[`Sidebar navigation should render only routes under current section 1`] = `
<DocumentFragment>
  @media screen {
  .emotion-0 {
    display: block;
  }
}

@media screen and (min-width: 480px) {
  .emotion-0 {
    display: block;
  }
}

@media screen and (min-width: 768px) {
  .emotion-0 {
    display: block;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-0 {
    display: none;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-0 {
    display: none;
  }
}

.emotion-1 {
  box-sizing: border-box;
  height: 100%;
}

.emotion-1>ul {
  box-sizing: border-box;
  position: relative;
  list-style-type: none;
  margin: 0;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 100%;
}

.emotion-1 li:last-of-type {
  margin-bottom: 0;
}

.emotion-2 {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.emotion-3 {
  background-color: transparent;
  color: #09111c;
  margin-top: 16px;
  margin-bottom: 0px;
}

.emotion-3.collapsed>li {
  overflow: hidden;
  max-height: 0px;
  -webkit-transition: max-height 0.8s cubic-bezier(0, 1, 0, 1) -0.1s;
  transition: max-height 0.8s cubic-bezier(0, 1, 0, 1) -0.1s;
  margin-bottom: 0px;
  visibility: hidden;
}

.emotion-3.expanded>li {
  transition-timing-function: cubic-bezier(0.5, 0, 1, 0);
  transition-delay: 0s;
}

.emotion-3.expanded>li:last-of-type {
  margin-bottom: 32px;
}

.emotion-4 {
  margin: 0;
  font-family: Poppins,sans-serif;
  font-size: 1.125rem;
  line-height: 1.265625rem;
  font-weight: 700;
  letter-spacing: 0em;
  padding: 0.5px 0px;
  margin-inline: 32px;
  margin-block: 4px;
}

.emotion-4::before {
  content: '';
  margin-bottom: -0.2035em;
  display: block;
}

.emotion-4::after {
  content: '';
  margin-top: -0.2215em;
  display: block;
}

.emotion-5 {
  margin: 0;
  padding: 0;
  display: grid;
  -webkit-column-gap: 20px;
  column-gap: 20px;
  grid-template-columns: 1fr auto;
}

.emotion-6 {
  margin: 0;
  padding: 0;
  display: inline-grid;
  -webkit-column-gap: 8px;
  column-gap: 8px;
  grid-template-columns: repeat(1, auto);
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  justify-items: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 32px;
  min-width: 64px;
  height: 32px;
  min-height: 32px;
  padding-inline: 8px;
  padding-block: 8px;
  box-sizing: border-box;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: auto;
  min-width: auto;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: transparent;
  border-radius: 50%;
  color: #3358cc;
  cursor: pointer;
}

.emotion-6 svg {
  width: 16px;
  height: 16px;
}

.emotion-6 svg {
  fill: #3358cc;
}

.emotion-6:hover:not(:disabled) {
  background-color: #ecf1ff;
}

.emotion-6:active:not(:disabled) {
  background-color: #d5e0fc;
}

.emotion-6:disabled {
  background-color: transparent;
  color: #a1acb4;
}

.emotion-6:disabled svg {
  fill: #a1acb4;
}

.emotion-6:focus-visible:not(:disabled) {
  outline-color: #3768fb;
  outline-style: solid;
  outline-width: 2px;
  outline-offset: 2px;
}

@media not all and (min-resolution: 0.001dpcm) {
  @supports (-webkit-appearance: none) and (stroke-color: transparent) {
    .emotion-6:focus-visible:not(:disabled) {
      outline-style: auto;
    }
  }
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-6 {
    transition-property: background-color;
    transition-duration: 200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-6 {
    transition-property: background-color;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-7 {
  color: #09111c;
  fill: #09111c;
  vertical-align: unset;
  display: inline-block;
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-7 {
    transition-property: fill;
    transition-duration: 200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-7 {
    transition-property: fill;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-7.emotion-7 {
  width: 24px;
  height: 24px;
  color: #09111c;
  fill: #09111c;
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-7.emotion-7 {
    transition-property: fill;
    transition-duration: 200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-7.emotion-7 {
    transition-property: fill;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-8 {
  box-sizing: border-box;
  margin-bottom: 0px;
}

.emotion-9 {
  margin: 0;
  padding: 0;
  display: inline-grid;
  -webkit-column-gap: 8px;
  column-gap: 8px;
  grid-template-columns: repeat(1, auto);
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  justify-items: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 64px;
  min-height: 40px;
  padding-inline: 64px;
  padding-block: 8px;
  box-sizing: border-box;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 40px;
  min-width: 64px;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-color: transparent;
  border-width: 4px;
  border-style: solid;
  color: #5a6a79;
  cursor: pointer;
  width: 100%;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  text-align: left;
}

.emotion-9 svg {
  width: 16px;
  height: 16px;
}

.emotion-9:hover:not(:disabled) {
  color: #254cac;
  background-color: #d5e0fc;
}

.emotion-9:active:not(:disabled) {
  color: #14328d;
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-9 {
    transition-property: background-color;
    transition-duration: 200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-9 {
    transition-property: background-color;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-10 {
  margin: 0;
  font-family: Poppins,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 600;
  letter-spacing: 0em;
  padding: 0.5px 0px;
  display: inline-block;
}

.emotion-10::before {
  content: '';
  margin-bottom: -0.391em;
  display: block;
}

.emotion-10::after {
  content: '';
  margin-top: -0.409em;
  display: block;
}

.emotion-17 {
  box-sizing: border-box;
  margin-bottom: 24px;
}

.emotion-17>ul {
  box-sizing: border-box;
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.emotion-18 {
  box-sizing: border-box;
  margin-bottom: 12px;
  padding-inline: 48px;
}

.emotion-19 {
  margin: 0;
  background-color: transparent;
  color: #09111c;
  font-family: Poppins,sans-serif;
  font-size: 1rem;
  line-height: 1.125rem;
  font-weight: 700;
  letter-spacing: 0em;
  padding: 0.5px 0px;
}

.emotion-19::before {
  content: '';
  margin-bottom: -0.2035em;
  display: block;
}

.emotion-19::after {
  content: '';
  margin-top: -0.2215em;
  display: block;
}

.emotion-35 {
  width: 100%;
  position: relative;
  left: calc(-50vw + 50%);
  margin-top: 4px;
  margin-bottom: 8px;
}

.emotion-36 {
  border-style: solid;
  border-color: #dee2e5;
  border-width: 1px;
  border-width: 0px;
  margin: 0;
  border-top-width: 1px;
  width: 100%;
}

<div
    class="emotion-0"
  >
    <nav
      aria-label="sidebar-secondary-navigation"
      class="emotion-1"
      data-testid="menu-container"
      role="navigation"
    >
      <ul
        role="list"
      >
        <ul
          class="emotion-2"
        >
          <div
            class="expanded emotion-3"
          >
            <h3
              class="emotion-4"
            >
              <div
                class="emotion-5"
              >
                Group 1
                <button
                  aria-expanded="true"
                  aria-label="Show sub-menu for Group 1"
                  class="emotion-6"
                  data-testid="button"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="emotion-7"
                    fill="currentColor"
                    height="24px"
                    viewBox="0 0 24 24"
                    width="24px"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M0 0h24v24H0V0z"
                      fill="none"
                    />
                    <path
                      d="M12 8l-6 6 1.41 1.41L12 10.83l4.59 4.58L18 14l-6-6z"
                    />
                  </svg>
                </button>
              </div>
            </h3>
            <li
              class="nk-menu-item emotion-8"
            >
              <a
                aria-current="false"
                class="emotion-9"
                data-testid="buttonLink"
                href="/group1/page1"
              >
                <span
                  class="emotion-10"
                >
                  Group 1 Page 1
                </span>
              </a>
            </li>
          </div>
        </ul>
        <ul
          class="emotion-2"
        >
          <div
            class="collapsed emotion-3"
          >
            <h3
              class="emotion-4"
            >
              <div
                class="emotion-5"
              >
                Group 2
                <button
                  aria-expanded="false"
                  aria-label="Hide sub-menu for Group 2"
                  class="emotion-6"
                  data-testid="button"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="emotion-7"
                    fill="currentColor"
                    height="24px"
                    viewBox="0 0 24 24"
                    width="24px"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M24 24H0V0h24v24z"
                      fill="none"
                      opacity=".87"
                    />
                    <path
                      d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6-1.41-1.41z"
                    />
                  </svg>
                </button>
              </div>
            </h3>
            <li
              class="nk-menu-group emotion-17"
            >
              <div
                class="emotion-18"
              >
                <h2
                  class="emotion-19"
                  id="mock-nk-1"
                >
                  Group 2 Page 1
                </h2>
              </div>
              <ul
                aria-labelledby="mock-nk-1"
              >
                <li
                  class="nk-menu-item emotion-8"
                >
                  <a
                    aria-current="false"
                    class="emotion-9"
                    data-testid="buttonLink"
                    href="/group2/page1/a"
                  >
                    <span
                      class="emotion-10"
                    >
                      Group 2 Page 1 a
                    </span>
                  </a>
                </li>
                <li
                  class="nk-menu-item emotion-8"
                >
                  <a
                    aria-current="false"
                    class="emotion-9"
                    data-testid="buttonLink"
                    href="/group2/page1/b"
                  >
                    <span
                      class="emotion-10"
                    >
                      Group 2 Page 1 b
                    </span>
                  </a>
                </li>
              </ul>
            </li>
            <li
              class="nk-menu-group emotion-17"
            >
              <div
                class="emotion-18"
              >
                <h2
                  class="emotion-19"
                  id="mock-nk-1"
                >
                  Group 2 Page 2
                </h2>
              </div>
              <ul
                aria-labelledby="mock-nk-1"
              >
                <li
                  class="nk-menu-item emotion-8"
                >
                  <a
                    aria-current="false"
                    class="emotion-9"
                    data-testid="buttonLink"
                    href="/group2/page2/a"
                  >
                    <span
                      class="emotion-10"
                    >
                      Group 2 Page 2 a
                    </span>
                  </a>
                </li>
                <li
                  class="nk-menu-item emotion-8"
                >
                  <a
                    aria-current="false"
                    class="emotion-9"
                    data-testid="buttonLink"
                    href="/group2/page2/b"
                  >
                    <span
                      class="emotion-10"
                    >
                      Group 2 Page 2 b
                    </span>
                  </a>
                </li>
              </ul>
            </li>
          </div>
        </ul>
        <div
          class="emotion-35"
        >
          <hr
            aria-hidden="true"
            class="emotion-36"
            data-testid="divider"
          />
        </div>
      </ul>
    </nav>
  </div>
  @media screen {
  .emotion-0 {
    display: none;
  }
}

@media screen and (min-width: 480px) {
  .emotion-0 {
    display: none;
  }
}

@media screen and (min-width: 768px) {
  .emotion-0 {
    display: none;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-0 {
    display: block;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-0 {
    display: block;
  }
}

.emotion-1 {
  box-sizing: border-box;
  height: 100%;
}

.emotion-1>ul {
  box-sizing: border-box;
  position: relative;
  list-style-type: none;
  margin: 0;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 100%;
}

.emotion-1 li:last-of-type {
  margin-bottom: 0;
}

.emotion-2 {
  box-sizing: border-box;
  margin-bottom: 0px;
}

.emotion-3 {
  margin: 0;
  padding: 0;
  display: inline-grid;
  -webkit-column-gap: 8px;
  column-gap: 8px;
  grid-template-columns: repeat(3, auto);
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  justify-items: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 64px;
  min-height: 40px;
  padding-inline: 16px;
  -webkit-padding-start: 32px;
  padding-inline-start: 32px;
  padding-block: 8px;
  box-sizing: border-box;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 40px;
  min-width: 64px;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-color: transparent;
  border-width: 4px;
  border-style: solid;
  color: #5a6a79;
  cursor: pointer;
  width: 100%;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  text-align: left;
}

.emotion-3 svg {
  width: 16px;
  height: 16px;
}

.emotion-3:hover:not(:disabled) {
  color: #254cac;
  background-color: #d5e0fc;
}

.emotion-3:active:not(:disabled) {
  color: #14328d;
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-3 {
    transition-property: background-color;
    transition-duration: 200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-3 {
    transition-property: background-color;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-4 {
  margin: 0;
  font-family: Poppins,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 600;
  letter-spacing: 0em;
  padding: 0.5px 0px;
  display: inline-block;
}

.emotion-4::before {
  content: '';
  margin-bottom: -0.391em;
  display: block;
}

.emotion-4::after {
  content: '';
  margin-top: -0.409em;
  display: block;
}

.emotion-6 {
  margin-bottom: 32px;
}

<div
    class="emotion-0"
  >
    <nav
      aria-label="menu-sidebar"
      class="emotion-1"
      data-testid="menu-container"
      role="navigation"
    >
      <ul
        role="list"
      >
        <li
          class="nk-menu-item emotion-2"
        >
          <a
            aria-current="false"
            class="emotion-3"
            href="/group1/page1"
          >
            <span
              class="emotion-4"
            >
              Group 1 Page 1
            </span>
            <span
              class="emotion-4"
            >
               
            </span>
            <span />
          </a>
        </li>
      </ul>
    </nav>
    <div
      class="emotion-6"
    />
  </div>
</DocumentFragment>
`;
